[feat]: Contract Deployment On Sepolia Testnet

--- a/foundry.toml
+++ b/foundry.toml
@@ -25,6 +25,7 @@ remappings = [
 # forge script script/ContractScriptName.s.sol:ContractScriptName --rpc-url $(SEPOLIA_RPC_URL) --sender PUBLIC_ADDRESS_OF_ACCOUNT_YOU_IMPORTED --account NAME_OF_FILE --etherscan-api-key $(ETHERSCAN_API_KEY) --verify --broadcast
 
 # jq '.abi' out/ContractName.sol/ContractName.json > ContractNameABI.json
+# jq '.abi' out/TreasureTiles.sol/TreasureTiles.json > TreasureTilesABI.json
 
 [fuzz]
 runs = 1000
@@ -60,7 +61,7 @@ goerli = { key = "${API_KEY_ETHERSCAN}" }
 mainnet = { key = "${API_KEY_ETHERSCAN}" }
 optimism = { key = "${API_KEY_OPTIMISTIC_ETHERSCAN}" }
 polygon = { key = "${API_KEY_POLYGONSCAN}" }
-sepolia = { key = "${API_KEY_ETHERSCAN}" }
+sepolia = { key = "{6DGM59A47Z9UZNCSSR44ASZ5NW6ZDDWMK4}" }
 mode = { key = "${API_KEY_MODESCAN}" }
 
 
