(Chore) Update Contract GameId Return And Emit GameId Results

--- a/TreasureTilesABI.json
+++ b/TreasureTilesABI.json
@@ -302,7 +302,13 @@
         "internalType": "uint256"
       }
     ],
-    "outputs": [],
+    "outputs": [
+      {
+        "name": "",
+        "type": "uint256",
+        "internalType": "uint256"
+      }
+    ],
     "stateMutability": "payable"
   },
   {
@@ -367,6 +373,12 @@
     "type": "event",
     "name": "RandomnessFulfilled",
     "inputs": [
+      {
+        "name": "gameId",
+        "type": "uint256",
+        "indexed": true,
+        "internalType": "uint256"
+      },
       {
         "name": "nonce",
         "type": "uint256",
